--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,7 +30,6 @@ p {
 }
 
 h1 {
-    margin-bottom: .25em;
     font-size: 3rem;
     text-align: center;
     overflow: hidden;
@@ -44,6 +43,7 @@ h2 {
 p {
     font-size: 1rem;
     line-height: 1.6;
+    text-align: center;
 }
 
 header a {
