--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,11 +14,9 @@
 }
 
 body {
-  background-image: url('/assets/images/bg-red.webp');
-  background-size: cover;
-  background-repeat: no-repeat;
   font-family: 'Austral Sans Stamp Regular';
-  color: var(--color-white);
+  color: var(--color-black);
+  background-color: #9AD1B2;
   padding: 0;
   margin: 0;
 }
@@ -47,7 +45,7 @@ p {
 
 header a {
   font-size: 1.5rem;
-  color: var(--color-white);
+  color: var(--color-black);
   text-decoration: none;
 }
 
