different way to load fonts

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,6 @@
+@font-face {font-family: "AustralSansRough-Regular"; src: url("//db.onlinewebfonts.com/t/b8410d24906695600346b88dde29355a.eot"); src: url("//db.onlinewebfonts.com/t/b8410d24906695600346b88dde29355a.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/b8410d24906695600346b88dde29355a.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/b8410d24906695600346b88dde29355a.woff") format("woff"), url("//db.onlinewebfonts.com/t/b8410d24906695600346b88dde29355a.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/b8410d24906695600346b88dde29355a.svg#AustralSansRough-Regular") format("svg"); }
 
+@font-face {font-family: "PT Banana Split"; src: url("//db.onlinewebfonts.com/t/ca05bd57a546eb9007cb79fe70783db6.eot"); src: url("//db.onlinewebfonts.com/t/ca05bd57a546eb9007cb79fe70783db6.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/ca05bd57a546eb9007cb79fe70783db6.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/ca05bd57a546eb9007cb79fe70783db6.woff") format("woff"), url("//db.onlinewebfonts.com/t/ca05bd57a546eb9007cb79fe70783db6.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/ca05bd57a546eb9007cb79fe70783db6.svg#PT Banana Split") format("svg"); }
 
 :root {
   --color-white: #ffffff;
