--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,10 +12,11 @@
 }
 
 body {
-  font-family: 'Austral Sans Stamp Regular';
-  color: var(--color-white);
   padding: 0;
   margin: 0;
+  font-family: 'Austral Sans Stamp Regular';
+  color: var(--color-white);
+  background-color: #9AD1B2;
 }
 
 h1,
@@ -42,7 +43,7 @@ p {
 
 header a {
   font-size: 1.5rem;
-  color: var(--color-white);
+  color: var(--color-black);
   text-decoration: none;
 }
 
